Fix JavaFX module path for runtime